name:                hapidry
version:             0.2.10
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/capgelka/hapidry#readme
license:             GPL-2
license-file:        LICENSE
author:              capgelka
maintainer:          ldyach@yandex.ru
copyright:           GPL
category:            network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api, Options, Utils, Json, Internal.Api, Internal.Json
  ghc-options:         -O3
  build-depends:       base
                     , lens
                     , lens-aeson
                     , cryptohash 
                     , base16-bytestring
                     , containers
                     , wreq
                     , bytestring
                     , text
                     , aeson
                     , optparse-applicative
                     , configurator
                     , attoparsec
                     , unordered-containers
                     , split
                     , time
                     , directory
  if !os(windows)
    build-depends:     editor-open


  default-language:    Haskell2010

executable hapidry
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , hapidry
                     , lens     
                     , bytestring
                     , configurator
                     , text
                     , gitrev
                     , process
  default-language:    Haskell2010

test-suite hapidry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:     ApiSpec, JsonSpec
  main-is:             Spec.hs
  build-depends:       base
                     , hapidry
                     , hspec
                     , text
                     , bytestring
                     , QuickCheck
                     , wreq
                     , lens
                     , aeson
                     , lens-aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capgelka/hapidry
