name:                hapidry
version:             0.4
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/capgelka/hapidry#readme
license:             GPL-2
license-file:        LICENSE
author:              capgelka
maintainer:          ldyach@yandex.ru
copyright:           GPL
category:            network
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends: base >= 4.7 && < 5, Cabal >= 1.18, directory >= 1.2.1

library
  hs-source-dirs:      src
  exposed-modules:     Api, Options, Utils, Json, Internal.Api, Internal.Json
  ghc-options:         -O3
  build-depends:       base
                     , lens
                     , lens-aeson
                     , cryptohash 
                     , base16-bytestring
                     , containers
                     , wreq
                     , bytestring
                     , text
                     , aeson
                     , optparse-applicative
                     , configurator
                     , attoparsec
                     , unordered-containers
                     , split
                     , time
                     , directory
  extra-libraries: html_md_tools ssl crypto
  if !os(windows)
    build-depends:     editor-open


  default-language:    Haskell2010

executable hapidry
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
-- -l /home/lott/Data/hapidry/bin/libhtml_md_tools.so -dynamic
  build-depends:       base
                     , hapidry
                     , lens     
                     , bytestring
                     , configurator
                     , text
                     , gitrev
                     , process
 -- include-dirs:         /home/lott/Data/hapidry/bin/
 -- c-sources: foreign/html_md_tools2.c foreign/libhtml_md_tools.a 
  --cc-options: -O2 -std=c99
  --include-dirs: foreign
  -- include-dirs: bin
  --extra-lib-dirs: foreign
  default-language:    Haskell2010

test-suite hapidry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:     ApiSpec, JsonSpec
  main-is:             Spec.hs
  build-depends:       base
                     , hapidry
                     , hspec
                     , text
                     , bytestring
                     , QuickCheck
                     , wreq
                     , lens
                     , aeson
                     , lens-aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capgelka/hapidry
